tests/NormalTests/paczka1/small_fuzzy/22599311.err
Error in line 3: CWRL8rYa S183 6,2
Error in line 12: 9sC S372 53,2
Error in line 13: xK3atFojp0 S183 97,0
